RECOMMIT CORRUPTED CSS - custom.css

--- a/_assets/estate/site/css/custom.css
+++ b/_assets/estate/site/css/custom.css
@@ -16,10 +16,14 @@
 .xsmall     {font-size:10px}
 .fff     {color:#fff}
 .red     {color:red}
+.arial {font-family:Arial,sans-serif}
 .textleft    {text-align:left}
 .textright   {text-align:right}
 .textcenter {text-align:center}
 .divcenter  {float:none!important; margin: 0 auto!important}
+.headerbox  {padding:10px 20px;background:#eee; font-size:18px;margin: 0 0 10px}
+.contentbox {padding:10px 20px;background:#f4f4f4; margin-bottom:10px}
+.contentbox.nobg {padding:10px 20px;background:transparent; }
 
 .noLeftMargin  {margin-left:0!important}
 .noRightMargin {margin-right:0!important}
@@ -89,6 +93,42 @@ i.fright {margin:0 0 0 12px}
 
 /* * * ACCORDION OVERRIDE */
 .ui-accordion .ui-accordion-header a {padding:0.6em 0.6em 0.6em 1.8em; outline:none}
+/* landing page */
+#landing-page .banner{border:1px solid #000; margin:50px 0px 0px 0px; position:relative; height:300px; margin-bottom:35px}
+#landing-page .textrow {border-bottom:1px solid #CCC; color:#555}
+#landing-page .textrow:first-child {border-top:1px solid #ccc}
+
+#landing-page .textrow .item {float:left; width:50%; font-size:14px; line-height:22px; font-family:arial}
+#landing-page .textrow .item span{display:block; font-size:20px; margin:40px 0px 20px 0px}
+#landing-page .textrow .text { padding: 10px 0px}
+#landing-page .banner img {position:absolute; bottom:0px;  left:80px;  }
+#landing-page .banner .text{position:absolute;  left:380px;  top:60px;  text-align:center}
+#landing-page .banner .lp-label{ font-size:50px;  font-weight:normal;  line-height:55px;  margin-bottom:15px}
+#landing-page .banner .lp-sub{font-size:20px; line-height:30px; color:#222; margin-bottom:35px}
+#landing-page .banner .lp-button{padding:6px 22px 6px; text-align:center; font-size:14px}
+
+#footer-menu {}
+#footer-menu ul
+{
+	list-style-type: none;
+}
+#footer-menu ul li a
+{
+	text-decoration: none;
+	color: #999999;
+	font-size:10px;
+}
+#footer-menu li a:hover
+{
+	color: #FFFFFF;
+}
+#footer-menu ul li.header a
+{
+	font-weight: bold;
+	font-size: 11px;
+	margin: 0px 0px 5px 0px;
+	color: #999999;
+}
 
 /* B O X E S */
 #main-page {padding-top:28px}
