--- a/_assets/estate/site/css/custom.css
+++ b/_assets/estate/site/css/custom.css
@@ -90,6 +90,11 @@ i.fright {margin:0 0 0 12px}
 
 /*sidebar panel */
 .line-tab {float:left; font-size:12px; font-weight:bold; padding:4px 20px; margin:0 0 -1px 8px; border:1px solid #ccc; border-bottom:none; -webkit-border-radius:8px 8px 0 0;  -moz-border-radius:8px 8px 0 0; border-radius:8px 8px 0 0}
+.cartWidget .item {border-bottom:1px dotted #ddd;padding:10px 0 8px;}
+.cartWidget .item:last-child {border-bottom:none}
+.cartWidget .productName {}
+.cartWidget .price {color:#888}
+.cartWidget .icoDelete {display:block; float:right}
 
 /* * * ACCORDION OVERRIDE */
 .ui-accordion .ui-accordion-header a {padding:0.6em 0.6em 0.6em 1.8em; outline:none}
