--- a/_assets/estate/site-blue/css/style.css
+++ b/_assets/estate/site-blue/css/style.css
@@ -25,7 +25,7 @@ a{cursor: pointer}
 
 }
 
-.clear       {clear:both}
+.clear,.clr   {clear:both}
 .fleft       {float:left}
 .fright      {float:right}
 .border      {border:1px solid red}
