--- a/_assets/estate/site-blue/css/style.css
+++ b/_assets/estate/site-blue/css/style.css
@@ -45,6 +45,11 @@ a{cursor: pointer}
 .textright   {text-align:right}
 .textcenter {text-align:center}
 
+ /* Shorcuts */
+ .fr {float:right;}
+ .fl {float:left;}
+
+
 form {margin:0;padding:0}
 
 /* * * PRELOADER */
