--- a/_assets/estate/site-blue/css/flow.css
+++ b/_assets/estate/site-blue/css/flow.css
@@ -205,6 +205,8 @@
     .adddevice .ldarkgreybg .row-fluid:last-child{ 
         border-bottom: none 
     }
+
+
 	
 /*Modals*/	
 .pop-modal{
@@ -253,6 +255,17 @@ input.pop-email-input{border:2px solid #bdc3c7; width:90%; margin:10px 0 0 0; pa
 
 .pop-inputmobile span,
  .pop-verifycode span{padding-left:10px;}
+.pop-inputmobile span,
+.pop-verifycode span{padding-left:10px;}
+
+ 
+.modifyPlan-txt{color:#1769B3; padding:20px 0; clear:both}
+.modifyPlan-txt input{width:80%;border:2px solid #bdc3c7; padding:7px 5px; margin:5px 0}
+.pop-content .form{position:relative; margin:0;}
+.pop-content .form input[type="file"]{z-index: 999;line-height: 0;font-size: 50px;position: absolute;opacity: 0;filter: alpha(opacity = 0);-ms-filter: "alpha(opacity=0)";cursor: pointer;_cursor: hand;margin: 0;left:0;}
+.pop-content .add-photo-btn{background-color: #83B81A;color: #FFFFFF;cursor: pointer;display: block;font-size: 18px;height: 37px;margin: 0;min-width: 110px;overflow: hidden;padding: 0;position: absolute;right: 30px;text-align: center;top: 5px;}
+
+
 
 /*typehead - customize*/
 .pop-content .dropdown-menu{width:68.7%; background-color:#34495e; border:none; padding:3px; margin-top:25px}
