--- a/_assets/estate/site-blue/css/flow.css
+++ b/_assets/estate/site-blue/css/flow.css
@@ -476,7 +476,7 @@ input.pop-email-input{border:2px solid #bdc3c7; width:90%; margin:10px 0 0 0; pa
 
  /**Plan Options **/
 .plan-tile-option4{width:321px; height:277px; background:url(../images/tile-plan-bg4.jpg) repeat-x; text-align:center; color:#FFF; display:table; cursor:pointer}
-.plan-tile-option4 .plan-name{font-family:'fs_elliot_cyrillicregular'; font-size:25px; font-weight:bold}
+.plan-tile-option4 .plan-name{font-family:'fs_elliot_cyrillicregular'; line-height:35px; font-size:25px; font-weight:bold}
 .plan-tile-option4 .plan-off{font-family:'fs_elliot_cyrillicregular'; font-size:13px; background-color:#7ebe36; padding:3px;  width:208px}
 
 .icon-big-mail {background:url(../images/icon-big-mail.png) no-repeat; width:152px; height:152px; margin:auto}
