--- a/_assets/estate/site-blue/css/style.css
+++ b/_assets/estate/site-blue/css/style.css
@@ -199,7 +199,7 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
 	/* ================
 		@CSS By: Aldrin
 	================ */
- .order-type{padding:20px;}
+.order-type{padding:20px;}
  .order-type h2 {color:#0060b1; font-weight:bold; padding: 5px 0;}
  .order-type h2 img {margin-right:15px;}
  
@@ -319,21 +319,21 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  .plan-recommend hr {border-top:1px solid #d4d2d2; border-bottom:1px solid #f3f1f1; margin:0; height:2px;}
  .plan-recommend p {margin:0;}
  .plan-recommend a {
-	display:block;
-	border:none; min-width: 173px; color:#fff; font-size: 18px; font-family: 'fs_elliot_cyrillicregular'; line-height: 40px;
-	-webkit-border-radius: 31px;
-	-moz-border-radius: 31px;
-	border-radius:31px;    
-	background: #1767b2; /* Old browsers */
-	background: -moz-linear-gradient(top,  #1767b2 0%, #185dab 50%, #1854a5 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1767b2), color-stop(50%,#185dab), color-stop(100%,#1854a5)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1767b2', endColorstr='#1854a5',GradientType=0 ); /* IE6-9 */
-	margin:0 auto; 
-	width:58px;
+    display:block;
+    border:none; min-width: 173px; color:#fff; font-size: 18px; font-family: 'fs_elliot_cyrillicregular'; line-height: 40px;
+    -webkit-border-radius: 31px;
+    -moz-border-radius: 31px;
+    border-radius:31px;    
+    background: #1767b2; /* Old browsers */
+    background: -moz-linear-gradient(top,  #1767b2 0%, #185dab 50%, #1854a5 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1767b2), color-stop(50%,#185dab), color-stop(100%,#1854a5)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1767b2', endColorstr='#1854a5',GradientType=0 ); /* IE6-9 */
+    margin:0 auto; 
+    width:58px;
  }
  .plan-recommend {margin-left:30px;}
  .plan-recommend a:hover{color:#fff;}
@@ -395,20 +395,20 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  #status-pager ul li:nth-child(3) {margin-right:0;}
  #status-pager ul li p {margin-bottom:50px;}
  #status-pager ul li a, #thankyou-08 a {
- 	display:block;
-	border:none; min-width: 145px; color:#fff; font-size: 18px; font-family: 'fs_elliot_cyrillicregular'; line-height: 40px;
-	-webkit-border-radius: 31px;
-	-moz-border-radius: 31px;
-	border-radius:31px;    
-	background: #1767b2; /* Old browsers */
-	background: -moz-linear-gradient(top,  #1767b2 0%, #185dab 50%, #1854a5 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1767b2), color-stop(50%,#185dab), color-stop(100%,#1854a5)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1767b2', endColorstr='#1854a5',GradientType=0 ); /* IE6-9 */
-	margin:0 auto; 
+    display:block;
+    border:none; min-width: 145px; color:#fff; font-size: 18px; font-family: 'fs_elliot_cyrillicregular'; line-height: 40px;
+    -webkit-border-radius: 31px;
+    -moz-border-radius: 31px;
+    border-radius:31px;    
+    background: #1767b2; /* Old browsers */
+    background: -moz-linear-gradient(top,  #1767b2 0%, #185dab 50%, #1854a5 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1767b2), color-stop(50%,#185dab), color-stop(100%,#1854a5)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #1767b2 0%,#185dab 50%,#1854a5 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1767b2', endColorstr='#1854a5',GradientType=0 ); /* IE6-9 */
+    margin:0 auto; 
  }
  
  #settle-overdue p {font-size:1.3em;}
@@ -445,9 +445,7 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  .s-p-current-title label {font-size:1.2em;}
  .s-p-current-plan .row {margin-left:0; padding:30px 0;}
  .s-p-title {font-weight:bold;}
-
-
-
+ 
  #thankyou-08 a {width:173px; margin:10px auto;}
  #reserve-08 {width:926px;}
  #reserve-08 form ul {list-style:none; text-align:left;}
@@ -473,7 +471,7 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  #contact-us-03 form .row p {color:#1f608a;}
  
  @media only screen and (min-device-width : 320px){
-	#contact-us-03 {width:70%;}
+    #contact-us-03 {width:70%;}
  }
  
  #reset-06{width:810px;}
@@ -525,16 +523,24 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  .check-eligibility .fl {margin: 20px 0 0 20%;}
  .check-eligibility .fr {margin: 20px 20% 0 0;}
  
+ .compare p {margin:0;}
  .compare ul {list-style:none; margin:0;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(1) {background:#1853a4;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(2) {background:#e2422d;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(3) {background:#fddc33;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(4) {background:#f39431;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(5) {background:#4ea43b;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(6) {background:#e75e9b;}
- .compare .col-lg-3:nth-child(1) ul li:nth-child(7) {background:#1769b3;}
+ .compare .col-lg-3 ul li {background:#eee; text-align:left; border-right:1px solid #e7e7e7; border-bottom:1px solid #f7f7f7; /*padding:20px 30px;*/ padding:20px 10px; height:80px;}
+ .compare .col-lg-3 ul li:nth-child(1) {background:#ddd;}
+ .compare .col-lg-2 ul li:nth-child(1), .compare .col-lg-3 ul li:nth-child(1) {text-align:center; height:180px;}
 
- .pickup {background:#f1f3f5; border-radius:10px; box-shadow:2px 2px 5px #bbc3cf; margin-bottom:30px; padding:40px 55px;}
+ .compare .col-lg-3 ul li:nth-child(1) .fl {text-align:left; margin-right:5px;}
+ .compare .col-lg-2 ul li {text-align:center; border-bottom:none; color:#fff; padding:20px 0;}
+ .compare .col-lg-2 ul li img{padding-bottom:10px;}
+ .compare .col-lg-2  ul li:nth-child(1) {background:#1853a4;}
+ .compare .col-lg-2 ul li:nth-child(2) {background:#e2422d;}
+ .compare .col-lg-2 ul li:nth-child(3) {background:#fddc33;}
+ .compare .col-lg-2 ul li:nth-child(4) {background:#f39431;}
+ .compare .col-lg-2 ul li:nth-child(5) {background:#4ea43b;}
+ .compare .col-lg-2 ul li:nth-child(6) {background:#e75e9b;}
+ .compare .col-lg-2 ul li:nth-child(7) {background:#1769b3;}
+
+ .pickup {background:#f1f3f5; border-radius:10px; box-shadow:2px 2px 5px #bbc3cf; margin-bottom:170px; padding:40px 55px;}
  .pickup hr {border-top:1px solid #cccccc; border-bottom:1px solid #fff; border-right:none; border-left:none; height:2px; margin:0 0 10px; padding:0;}
  
  .pickup-places-accordion .accordion-inner {background:#f8fafb; border-left:5px solid #7ebe36;}
@@ -567,7 +573,7 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  .t-f-order a:hover {color:#fff;}
  
  #receipt-popup {background:#fff; color:#58595b; padding:20px 10px; width:820px;}
- #receipt-popup p {margin:0;}
+ #receipt-popup p {margin:0; clear:none;}
  
  .r-p-logo {margin: 0 0 19px 29px;}
  .r-p-number {font-size:1.7em; font-weight:bold; margin-right:33px; padding-top:30px;}
@@ -576,8 +582,9 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  .r-p-title2 {text-align:left; background:#e7e7e7; padding:15px 30px;}
  .r-p-title2 p {text-transform:uppercase; font-weight:bold;}
  
- #receipt-popup label, #receipt-popup span {display:block; float:left; list-style:none;}
+ #receipt-popup label, #receipt-popup span {display:block; float:left; list-style:none; text-align:left;}
  #receipt-popup ul {list-style:none; margin:0;}
+ #receipt-popup input[type="submit"] {padding-top:10px; padding-bottom:10px;}
  
  .r-p-personal-info-left {text-align:left; margin-left:30px; padding-top:30px;}
  .r-p-personal-info-left p:nth-child(1) {font-size:1.3em; font-weight:bold;}
@@ -595,18 +602,18 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  
  .r-product-details { }
  .r-product-details li {font-weight:bold; border-bottom:1px solid #d7d7d7; text-align:left; padding:15px 15px; }
- .r-product-details .col-lg-1, .r-product-details .col-lg-2 {text-align:center;}
+ .r-product-details .col-lg-1, .r-product-details .col-lg-2 {text-align:center !important;}
  .r-product-details .col-lg-3 p:nth-child(2) {text-transform:uppercase; font-size:.8em;}
  
  .r-p-cost {padding:0 !important; margin:0;}
- .r-p-cost label {font-weight:bold; text-align:right; border-right:1px solid #cccccc; border-bottom:1px solid #cccccc; margin:0 auto; padding:20px 30px 20px 0; width:550px;}
+ .r-p-cost label {font-weight:bold; text-align:right !important; border-right:1px solid #cccccc; border-bottom:1px solid #cccccc; margin:0 auto; padding:20px 30px 20px 0; width:550px;}
  .r-p-cost label:nth-child(4) {border-bottom:none;}
  
  .r-p-cost span {font-weight:bold; font-size:1.3em; text-align:left; border-bottom:1px solid #cccccc; margin:0 auto; padding:20px 0 20px 40px; width:190px;}
  .r-p-cost span:nth-child(5) {border-bottom:none;}
  
  .r-p-title4 {background: #898989; color:#fff; padding:0 !important; margin:0;} 
- .r-p-title4 label {color:#ffffff; font-size:1.5em; text-align:right; border-right:1px solid #cccccc; margin:0 auto; padding:20px 30px 20px 0; width:550px;}
+ .r-p-title4 label {color:#ffffff; font-size:1.5em; text-align:right !important; border-right:1px solid #cccccc; margin:0 auto; padding:20px 30px 20px 0; width:550px;}
  .r-p-title4 span {font-size:2em; font-size:2em; font-weight:bold; text-align:left; margin:0 auto; padding:20px 0 20px 40px; width:190px;}
  
  #receipt-popup button {margin-top:-45px; margin-right:-25px;}
@@ -629,8 +636,65 @@ body{ font-family: 'fs_elliot_cyrilliclight' }
  .delivery-btn .iradio_flat-blue {left:46%;}
  
  .delivery input[type="submit"] {display:block; margin:0 auto;}
-
- #add-prepaid a {display:block; margin:0 auto; min-width: 173px; width: 173px; }
+ 
+ .company-information ul {list-style:none; margin:0;}
+ .company-information .span4, .company-information .span6, .company-information .span4, .company-information .span3 {margin:0 0 10px;}
+ .company-information .span4 { margin-right:10px;}
+ .company-information .span6 { margin-right:5px;}
+ .company-information input[type="submit"] {display:block; margin:0 auto; padding-top:10px; padding-bottom:10px;}
+ 
+ .company-information form .radio-btn li {position:relative; float:left; margin-right:10px; padding-left:25px;}
+ .company-information .btn-file {margin-left:-75px !important;}
+ 
+ .bill-instructions ul {list-style:none; margin:0;}
+ .bill-instructions ul li {position:relative; margin-right:20px; padding-left:25px;}
+ .bill-instructions label {display:block;}
+ .bill-instructions .span6, .bill-instructions .span7 {position:relative; margin:0;}
+ .bill-instructions .span6:nth-child(3) {padding-left:15px;}
+ .bill-instructions form input[type="submit"] {display:block; margin:0 auto; padding:10px 0;}
+ 
+ #forgot-reference label {display:block;}
+ #forgot-reference input {display:block; margin:0 auto;}
+ #forgot-reference input[type="submit"] {padding:10px; margin-top:20px;}
+ 
+ #soft_copy {display:none;}
+ 
+ #choice-bill .span7, #choice-bill .span5, #choice-bill .span16 {margin:0;}
+ #choice-bill .radio-btn2, #choice-bill .radio-btn3 {position:relative; padding-left:25px;}
+ 
+ .c-s-shopCart {background:#898989;}
+ 
+ .check-status-shop-cart {font-family: 'fs_elliot_cyrillicregular'; /*padding:20px;*/}
+ .check-status-shop-cart ul, .check-status-shop-cart-title {list-style:none; margin:0;}
+ .check-status-shop-cart-title li:first-child { color:#fff; border-radius:5px; -ms-border-radius:5px; text-align:center; border-bottom:none;}
+ .check-status-shop-cart ul li {background:#f3f3f3; border-bottom:1px solid #dddddd; padding:10px 0;}
+ .check-status-shop-cart ul li:nth-child(1) {background:#e7e7e7;}
+ .check-status-shop-cart ul li span:nth-child(2) {padding:0 10px;}
+ .check-status-shop-cart ul li span:nth-child(3), .check-status-shop-cart ul li span:nth-child(4), .check-status-shop-cart ul li span:nth-child(6) {text-align:center;}
+ .check-status-shop-cart span {display:block; min-height:0 !important; margin:0; padding:0;}
+ .check-status-shop-cart .span6 {min-height:0;}
+ 
+ .c-s-sub-total, .c-s-shipping, .c-s-total {float:right !important; font-size:1.5em;}
+ .c-s-sub-total span:nth-child(1), .c-s-shipping span:nth-child(1), .c-s-total span:nth-child(1) {text-align:right;}
+ .c-s-sub-total, .c-s-shipping {background:#e7e7e7; border-top:1px solid #fff;}
+ .c-s-sub-total span, .c-s-shipping span {border-right:1px solid #fff; padding:10px 0;}
+ .c-s-sub-total span:first-child, .c-s-shipping span:first-child, .c-s-total span:first-child {padding-right:20px;}
+ .c-s-total {background:#898989; color:#fff; min-height:0 !important;}
+ .c-s-total span {border-right:1px solid #808083; padding:15px 0;}
+ 
+ .check-status-shop-cart a {display:block; background-color: #574696 !important; background-image: linear-gradient(to bottom, #574696, #6554a4); color:#fff; font-weight:bold; font-weight:bold; border-radius:5px; text-align:center; padding:5px 0;}
+ .check-status-shop-cart a:hover {color:#fff;}
+ 
+ .c-s-bread-crumb {margin:0 0 20px; padding:0 20px; list-style:none;}
+ .c-s-bread-crumb li {float:left; width:20%;}
+ .c-s-bread-crumb li:nth-child(5) {width:17%;}
+ .c-s-bread-crumb li span {font-weight:bold;}
+ 
+ .c-s-product-image{ width:106px; height:106px; background-color:#FFFFFF; -moz-box-shadow: 2px 2px 2px 0px #ccc; -webkit-box-shadow: 2px 2px 2px 0px #ccc; box-shadow: 2px 2px 2px 0px #ccc; overflow:hidden; }
+ 
+ /*.c-s-less {background-color: #f39431; background-image: linear-gradient(to bottom, #f39431, #e18a30); background-repeat: repeat-x; border-radius:10px; border: 1px solid #d43f3a;} */
+ .c-s-less a {display:block; background-color: #f39431; background-image: linear-gradient(to bottom, #f39431, #e18a30); background-repeat: repeat-x; color:#fff; padding:4px 12px;}
+ 
 	/* =======
 	   End CSS
 	   ==== */
