--- a/_assets/estate/site-blue/css/flow.css
+++ b/_assets/estate/site-blue/css/flow.css
@@ -519,6 +519,23 @@ input.pop-email-input{border:2px solid #bdc3c7; width:90%; margin:10px 0 0 0; pa
 
 .payment_container .fl {float:left;margin-left: 16.08%;}
 
+ .thank-order-check {color:#363636; font-family: 'fs_elliot_cyrillicregular';}
+ .thank-order-check ul {list-style:none; margin:0;}
+ .thank-order-check ul li {position:relative; display:inline-block; margin-bottom:15px; width:48%;}
+ .thank-order-check ul li label {padding-left:30px;}
+ 
+.check-eligibility {background:#f1f3f5; border-radius:10px; padding:20px 54px;}
+ .check-eligibility h2 {text-align:center;}
+ .check-eligibility p {padding:0 30px;}
+ .check-eligibility a {display:block; text-align:center;}
+ .check-eligibility a:hover {color:#fff;}
+ .check-eligibility .fl {margin: 20px 0 0 20%;}
+ .check-eligibility .fr {margin: 20px 20% 0 0;}
+ .check-eligibility-btn  {margin-left:40%;}
+ .check-eligibility-btn ul {margin:0; list-style:none;}
+ .check-eligibility-btn ul li {position:relative; margin-bottom:10px;}
+ .check-eligibility-btn ul li:first-child {margin-right:5%;}
+ .check-eligibility-btn ul li label {margin-left:32px; font-weight:bold;}
 
  /*alternative responsive*/
  @media (max-width: 767px) {
